// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiErrorBanner Component should render when error prop is passed 1`] = `
<div>
  <div
    class="sc-bdfBwQ sc-fFubgz bpOTxk kGzXKs"
    display="flex"
    overflow="hidden"
    tabindex="-1"
  >
    <div
      class="sc-bdfBwQ dYQEuD"
      display="flex"
      height="3rem"
      width="3rem"
    >
      <div
        class="sc-bdfBwQ gdeLSY"
        height="3rem"
        width="3rem"
      />
      <div
        class="sc-bdfBwQ eZAcFF"
        color="yellow.700"
      >
        <svg
          aria-hidden="false"
          aria-label="Warning"
          fill="currentColor"
          height="30"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="30"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
          />
        </svg>
      </div>
    </div>
    <div
      class="sc-bdfBwQ jUEhLW"
      order="1,,0"
    >
      <div
        class="sc-bdfBwQ frzeeY"
      >
        <h5
          class="sc-dlfnbm byZgtA"
          font-size="400,,500"
        >
          An error occurred
        </h5>
      </div>
      <div
        class="sc-bdfBwQ hVbkPG"
      >
        <div
          class="sc-bkzZxe bAcGyW"
        >
          <p>
            Sorry, there was an issue loading your your resource.
          </p>
          <div>
            <div
              class="sc-iBPRYJ fFQEfy"
            >
              <div
                class="sc-fubCfw gfQkIM"
              >
                <div
                  class="sc-bdfBwQ cdBeiK"
                >
                  <button
                    class="sc-bdfBwQ sc-bqyKva hVbkPG eYYUXs"
                    type="button"
                  >
                    <span
                      class="sc-hBEYos fMOWWe"
                    >
                      Show Error Details
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApiErrorBanner Component should render with default props 1`] = `
<div>
  <div
    class="sc-bdfBwQ sc-fFubgz bpOTxk fZgrwD"
    display="flex"
    overflow="hidden"
    tabindex="-1"
  >
    <div
      class="sc-bdfBwQ dYQEuD"
      display="flex"
      height="3rem"
      width="3rem"
    >
      <div
        class="sc-bdfBwQ cUcLno"
        height="3rem"
        width="3rem"
      />
      <div
        class="sc-bdfBwQ goYQdl"
        color="white"
      >
        <svg
          aria-hidden="false"
          aria-label="Info"
          fill="currentColor"
          height="30"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="30"
        >
          <g>
            <path
              d="M11 17h2v-6h-2v6zm1-15C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zM11 9h2V7h-2v2z"
            />
          </g>
        </svg>
      </div>
    </div>
    <div
      class="sc-bdfBwQ jUEhLW"
      order="1,,0"
    >
      <div
        class="sc-bdfBwQ frzeeY"
      >
        <h5
          class="sc-dlfnbm byZgtA"
          font-size="400,,500"
        >
          You Have Another Mission
        </h5>
      </div>
      <div
        class="sc-bdfBwQ hVbkPG"
      >
        <div
          class="sc-bkzZxe bAcGyW"
        >
          <p>
            Clean the conference room
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApiErrorBanner Component should render with no props 1`] = `
<div>
  <div
    class="sc-bdfBwQ sc-fFubgz bpOTxk kGzXKs"
    display="flex"
    overflow="hidden"
    tabindex="-1"
  >
    <div
      class="sc-bdfBwQ dYQEuD"
      display="flex"
      height="3rem"
      width="3rem"
    >
      <div
        class="sc-bdfBwQ gdeLSY"
        height="3rem"
        width="3rem"
      />
      <div
        class="sc-bdfBwQ eZAcFF"
        color="yellow.700"
      >
        <svg
          aria-hidden="false"
          aria-label="Warning"
          fill="currentColor"
          height="30"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="30"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"
          />
        </svg>
      </div>
    </div>
    <div
      class="sc-bdfBwQ jUEhLW"
      order="1,,0"
    >
      <div
        class="sc-bdfBwQ frzeeY"
      >
        <h5
          class="sc-dlfnbm byZgtA"
          font-size="400,,500"
        >
          An error occurred
        </h5>
      </div>
      <div
        class="sc-bdfBwQ hVbkPG"
      >
        <div
          class="sc-bkzZxe bAcGyW"
        >
          <p>
            Sorry, there was an issue.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
